Fix group set dropdown cut off
Fixes CNVS-30196

Test Plan:
 - Create a group set in a group with a very long name
 - Go to the group home page
 - Click the open drop down caret in the left group nav
 - Notice that the drop down options with the group set
   names does not get cut off or covered by the main
   content of the page

Reviewed-on: https://gerrit.instructure.com/83950
Tested-by: Jenkins
QA-Review: Deepeeca Soundarrajan <dsoundarrajan@instructure.com>
Product-Review: Matthew Sessions <msessions@instructure.com>

--- a/app/stylesheets/base/_layout.scss
+++ b/app/stylesheets/base/_layout.scss
@@ -151,7 +151,12 @@ body {
 }
 
 .with-left-side {
-  #left-side { display: block; }
+  #left-side {
+    display: block;
+    overflow: visible;
+    /* #main has a z-index: 10 on it. This is needed so that group set names will appear above the main content */
+    z-index: 11;
+  }
   @if $use_new_styles == false {
     min-width: $left_side_width + $min_main_width;
     #footer { margin-left: $left_side_width; }
